--- a/dynamic-amm-quote/Cargo.toml
+++ b/dynamic-amm-quote/Cargo.toml
@@ -13,16 +13,16 @@ anchor-spl = "0.31"
 prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
 prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
 anyhow = "1.0.57"
-spl-token-swap = "3.0.0"
+spl-token-swap = { git = "https://github.com/Syrax-AI/solana-program-library.git" }
 meteora-marinade-sdk = { version = "0.1.0", features = ["cpi"] }
-spl-stake-pool = { git = "https://github.com/solana-labs/solana-program-library", rev = "cd79bba17331235ab489bae56600043ea853c70b", features = [
+spl-stake-pool = { version = "^2.0", features = [
     "no-entrypoint",
 ] }
-meteora-stable-swap-math = { git = "https://github.com/mercurial-finance/stable-swap", rev = "140c2e0d366765d49edc9a175ed12b1ad10c3b66", package = "stable-swap-math" }
-meteora-stable-swap-client = { git = "https://github.com/mercurial-finance/stable-swap", rev = "140c2e0d366765d49edc9a175ed12b1ad10c3b66", package = "stable-swap-client" }
+meteora-stable-swap-math = { git = "https://github.com/Syrax-AI/stable-swap", package = "stable-swap-math" }
+meteora-stable-swap-client = { git = "https://github.com/Syrax-AI/stable-swap", package = "stable-swap-client" }
 
 [dev-dependencies]
-solana-program-test = "1.16"
-anchor-client = "0.28.0"
-solana-sdk = "1.16"
+solana-program-test = "2"
+anchor-client = "0.31"
+solana-sdk = "2"
 bincode = "1.3.3"
