--- a/dynamic-amm-quote/Cargo.toml
+++ b/dynamic-amm-quote/Cargo.toml
@@ -14,12 +14,14 @@ prog_dynamic_amm = { path = "../programs/dynamic-amm", package = "dynamic-amm" }
 prog_dynamic_vault = { path = "../programs/dynamic-vault", package = "dynamic-vault" }
 anyhow = "1.0.57"
 spl-token-swap = { git = "https://github.com/Syrax-AI/solana-program-library.git" }
-meteora-marinade-sdk = { version = "0.1.0", features = ["cpi"] }
-spl-stake-pool = { version = "^2.0", features = [
-    "no-entrypoint",
+meteora-marinade-sdk = { git = "https://github.com/Syrax-AI/meteora-marinade-sdk.git", features = [
+    "cpi",
 ] }
+spl-stake-pool = { version = "^2.0", features = ["no-entrypoint"] }
 meteora-stable-swap-math = { git = "https://github.com/Syrax-AI/stable-swap", package = "stable-swap-math" }
 meteora-stable-swap-client = { git = "https://github.com/Syrax-AI/stable-swap", package = "stable-swap-client" }
+borsh = "0.10.3"
+borsh-derive = "1.5.7"
 
 [dev-dependencies]
 solana-program-test = "2"
